--- a/src/locales/en/ads.json
+++ b/src/locales/en/ads.json
@@ -26,7 +26,8 @@
       "createdAt": "Created at",
       "genres": "Genres",
       "location": "Location",
-      "description": "Description"
+      "description": "Description",
+      "from": "From"
     },
     "buttons": {
       "back": "Back to Ads",
@@ -50,6 +51,7 @@
   },
   "adForm": {
     "labels": {
+      "title": "Title",
       "typeOfAd": "Type of ad",
       "looking": "Looking for",
       "offering": "Offering",
@@ -59,13 +61,16 @@
       "location": "Location"
     },
     "placeholders": {
-      "looking": "Enter role/instrument", 
-      "genres": "Enter genres (comma separated)",
-      "description": "Write a short description (up to 100 charachters)",
+      "title": "Enter a title (up to 30 characters)",
+      "looking": "Enter role/instrument (up to 3)", 
+      "offering": "Enter role/instrument (up to 3)", 
+      "genres": "Enter genres (up to 3)",
+      "description": "Write a short description (up to 200 charachters)",
       "location": "Enter location"
     },
     "validations": {
-      "description": "Description cannot exceed 100 characters"
+      "title": "Title cannot exceed 30 characters",
+      "description": "Description cannot exceed 200 characters"
     },
     "buttons": {
       "cancel": "Cancel",
