--- a/src/locales/es/ads.json
+++ b/src/locales/es/ads.json
@@ -10,7 +10,7 @@
   "adsPage": {
     "title": "Anuncios",
     "buttons": {
-      "createAd": "Crear Ad"
+      "createAd": "Crear Anuncio"
     }
   },
   "adsList": {
@@ -26,7 +26,8 @@
       "createdAt": "Creado",
       "genres": "Géneros",
       "location": "Ubicación",
-      "description": "Descripción"
+      "description": "Descripción",
+      "from": "País"
     },
     "buttons": {
       "back": "Regresar",
@@ -50,22 +51,26 @@
   },
   "adForm": {
     "labels": {
+      "title": "Título",
       "typeOfAd": "Tipo de anuncio",
       "looking": "Se busca",
       "offering": "Se ofrece",
       "default": "Selecciona tipo",
-      "genres": "Géneros",
+      "genres": "Géneros Musicales",
       "description": "Descripción",
       "location": "Ubicación"
     },
     "placeholders": {
-      "looking": "Ingresa rol/instrumento", 
-      "genres": "Ingresa géneros (separados por coma)",
-      "description": "Escribe una descripción corta (hasta 100 caracteres)",
+      "title": "Ingresa un título (hasta 30 caracteres)", 
+      "looking": "Ingresa rol/instrumento (hasta 3)", 
+      "offering": "Ingresa rol/instrumento (hasta 3)", 
+      "genres": "Ingresa géneros (hasta 3)",
+      "description": "Escribe una descripción corta (hasta 200 caracteres)",
       "location": "ingresa la ubicación"
     },
     "validations": {
-      "description": "La descripción no puede exeder los 100 caracteres"
+      "title": "El título no puede exeder los 30 caracteres",
+      "description": "La descripción no puede exeder los 200 caracteres"
     },
     "buttons": {
       "cancel": "Cancelar",
