Add media editing page and implement sidebar visibility toggle
- Added MediaEditPage for inserting/editing media links
- Implemented toggleable Sidebar with full open/close behavior
- Integrated SidebarContext to control sidebar visibility
- Updated Sidebar options and translations (EN/ES)
- Refined ProfileHeader interaction with sidebar (settings icon)
- Updated UI labels and structure for media-related components

--- a/src/locales/en/music.json
+++ b/src/locales/en/music.json
@@ -40,8 +40,8 @@
     "expert": "Expert"
   },
   "edit": {
-    "title": "Edit Music Profile",
-    "addRoleTitle": "Add a new role",
+    "title": "Edit Roles",
+    "addRoleTitle": "Edit Roles",
     "selectLabel": "Select a Role",
     "defaultOption": "Choose a role",
     "customLabel": "Custom Role",
@@ -61,6 +61,8 @@
   },
   "media": {
     "title": "Musical Content",
+    "titleEdit": "Edit Media Content",
+    "titleAdd": "Add Media Content",
     "form": {
       "url": "URL",
       "urlPlaceholder": "https://...",
