Terms and Conditions now available

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -18,6 +18,8 @@
     "button": "Sign Up",
     "alreadyHaveAccount": "Already have an account?",
     "loginHere": "Log In",
+    "agreeTo": "By signing up, you agree to our",
+    "termsAndConditions": "Terms and Conditions",
     "errors": {
       "usernameRequired": "Username is required",
       "usernameMax": "Username cannot exceed 12 characters",
