--- a/src/locales/en/ui.json
+++ b/src/locales/en/ui.json
@@ -226,6 +226,7 @@
    "footer": {
     "copyright": "© {{year}} TuneBridge. All rights reserved.",
     "followUs": "Follow us on social media!",
+    "terms": "Terms and Conditions",
     "social": {
       "facebook": "Facebook",
       "twitter": "Twitter",
