--- a/src/locales/es/auth.json
+++ b/src/locales/es/auth.json
@@ -18,6 +18,8 @@
     "button": "Registrarse",
     "alreadyHaveAccount": "¿Ya tenés una cuenta?",
     "loginHere": "Iniciá sesión",
+    "agreeTo": "Al registrarte, aceptas nuestros",
+    "termsAndConditions": "Términos y Condiciones",
     "errors": {
       "usernameRequired": "El nombre de usuario es obligatorio",
       "usernameMax": "El nombre de usuario no puede tener más de 12 caracteres",
