--- a/src/locales/es/ui.json
+++ b/src/locales/es/ui.json
@@ -226,6 +226,7 @@
    "footer": {
     "copyright": "© {{year}} TuneBridge. Todos los derechos reservados.",
     "followUs": "¡Síguenos en las redes sociales!",
+    "terms": "Términos y Condiciones",
     "social": {
       "facebook": "Facebook",
       "twitter": "Twitter",
